# desafio7-edge-impulse-picow

./: CMakeLists.txt  README_INTEGRACAO.md  diagram.json  main.cpp  wokwi.toml
edge-impulse/model-parameters/: model_metadata.h  model_variables.h
edge-impulse/tflite-model/: tflite_learn_1021805_30_compiled.cpp  tflite_learn_1021805_30_compiled.h
